...
                self.view?.updateProfileDetails(profile: profileService.profile)
            }
        self.view?.updateProfileDetails(profile: profileService.profile)
    }
    
    func showLogoutAlert(vc: UIViewController) {
        let alert = UIAlertController(title: "Пока-пока!",
                                      message: "Уверены, что хотите выйти?",
                                      preferredStyle: .alert)
        let yesAction = UIAlertAction(title: "Да",
                                      style: .default) { _ in
            OAuth2TokenStorage().deleteToken()
            WebViewViewController.cleanCookies()
            let splashVC = SplashViewController()
            splashVC.isFirst = true
            splashVC.modalPresentationStyle = .fullScreen
...
