...
        }
    }
    
    private lazy var backButton: UIButton = {
        let element = UIButton(type: .custom)
        element.setImage(Resources.Images.backButtonWhite, for: .normal)
        element.accessibilityIdentifier = "BackButton"
        return element
    }()

    private lazy var shareButton: UIButton = {
        let element = UIButton(type: .custom)
        element.setImage(Resources.Images.shareImage, for: .normal)
...
